<resources>
    <string name="app_name">My iTunes Library</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title">Title</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="add">Add</string>
    <string name="find_music">Find music...</string>
    <string name="preferred_search">Preferred Search</string>
    <string name="please_enter_the_data_below">Please enter the data below</string>
    <string name="nickname">Nickname</string>
    <string name="proceed">proceed</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="artist">Artist</string>
    <string name="bookmark_name">Bookmark Name:</string>
    <string name="album_name">Album Name</string>
    <string name="separator">:</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="view_on_itunes">View on iTunes</string>
    <string name="action">Action</string>
</resources>