<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".TrackDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_artwork"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/text_view_track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_artwork"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_track_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/artist"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <GridLayout
            android:id="@+id/grid_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_artist_name"
            android:layout_marginTop="15dp"
            android:columnCount="3"
            android:orientation="horizontal">

            <TextView
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name" />

            <TextView
                style="@style/Separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator" />

            <TextView
                android:id="@+id/text_view_album_name"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal" />

            <TextView
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                style="@style/Separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator" />

            <TextView
                android:id="@+id/text_view_type"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal" />

            <TextView
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                style="@style/Separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator" />

            <TextView
                android:id="@+id/text_view_price"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal" />

        </GridLayout>

        <Button
            android:id="@+id/button_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grid_layout_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="#20C997"/>

        <Button
            android:id="@+id/view_on_iTunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_action"
            android:layout_centerHorizontal="true"
            android:onClick="viewOnItunes"
            android:text="@string/view_on_itunes"
            android:textColor="#20C997"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </RelativeLayout>
</ScrollView>